experiments-setup/experiments/exp06-node-drain/app/deployment-db.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-db
  labels:
    app: go-app-db
    release: primary
spec:
  selector:
    matchLabels:
      app: go-app-db
      release: primary
  template:
    metadata:
      labels:
        app: go-app-db
        release: primary
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: go-app-db
        image: docker.io/bitnami/mongodb:4.0.3
        imagePullPolicy: "Always"
        ports:
        - name: mongodb
          containerPort: 27017
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: data
          mountPath: /bitnami/mongodb
        resources:
          {}
          
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: go-app-db
