experiments-setup/experiments/exp06-node-drain/app/service-app.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-app
